Update logo but not successful

--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -130,7 +130,7 @@
 					<!-- <li class="nav-item"><a class="navbar-brand" href="../../../html/ltr/vertical-compact-menu-template/index.html"><img class="brand-logo" alt="robust admin logo" src="https://mksol.vn/themes/robust-admin/app-assets/images/logo/logo-light-sm.png"> -->
 					<li class="nav-item"><a class="navbar-brand" href="#"><img
 							class="brand-logo" alt="robust admin logo"
-							src="resources/app-assets/images/logo/logo-light-sm.png">
+							th:src="@{/resources/app-assets/images/logo/logo-light-sm.png}">
 							<h3 class="brand-text">CRM</h3></a></li>
 					<li class="nav-item d-md-none"><a
 						class="nav-link open-navbar-container" data-toggle="collapse"
