Load data detail's customer to customerDetail.html successfully

--- a/web/src/main/webapp/WEB-INF/templates/fragments/leftNavCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/leftNavCRM.html
@@ -16,11 +16,11 @@
 						class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a></li>
 
 				<li class="nav-item has-sub" style=""><a class="menu-item"
-					href="/crm-web/customer"><i class="icon-note"></i><span
+					href="/crm-web/customer-list"><i class="icon-note"></i><span
 						class="menu-title" data-i18n="nav.templates.main">Khách
 							hàng</span></a>
 					<ul class="menu-content" style="">
-						<li><a class="menu-item" href="/crm-web/customer"
+						<li><a class="menu-item" href="/crm-web/customer-list"
 							data-i18n="nav.dash.fitness">Danh sách khách hàng</a></li>
 						<li><a class="menu-item" href="#"
 							data-i18n="nav.dash.project">Hành trình khách hàng</a></li>
