update Add New Customer function (check phone number existing)

--- a/web/src/main/webapp/resources/css/new_style.css
+++ b/web/src/main/webapp/resources/css/new_style.css
@@ -507,3 +507,7 @@ nav-link-expand i.fa-compress:before {
 	transform: scale(1.1);
 }
 
+.table-bordered th, 
+.table-bordered td {
+    border: 1px solid #dee2e6;
+}
