--- a/web/src/main/webapp/WEB-INF/templates/createCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/createCustomer.html
@@ -54,12 +54,31 @@ body {
 .form-group button:hover {
 	background-color: #45a049;
 }
+
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-danger {
+    color: #dc3545; /* Màu chữ đỏ */
+    background-color: #f8d7da; /* Màu nền nhẹ */
+    border-color: #f5c6cb; /* Màu viền */
+}
 </style>
 </head>
 <body>
 
 	<div class="container">
 		<h2>Add New Customer</h2>
+
+		<!-- Display error message -->
+		<div th:if="${errorMessage}" class="alert alert-danger">
+			<p th:text="${errorMessage}"></p>
+		</div>
+		
 		<form id="customerForm" action="save-customer" method="post">
 			<div class="form-group">
 				<!-- <label for="id">Customer ID:</label> <input type="text" id="id"
@@ -68,19 +87,20 @@ body {
 			</div>
 			<div class="form-group">
 				<label for="name">Name:</label> <input type="text" id="name"
-					name="name" required>
+					name="name" required th:value="${customer.name}">
 			</div>
 			<div class="form-group">
 				<label for="phone">Phone:</label> <input type="text" id="phone"
-					name="phone" required>
+					name="phone" required th:value="${customer.phone}">
 			</div>
 			<div class="form-group">
 				<label for="address">Address:</label> <input type="text"
-					id="address" name="address" required>
+					id="address" name="address" required th:value="${customer.address}">
 			</div>
 			<div class="form-group">
 				<button type="submit">Add Customer</button>
 			</div>
+			
 		</form>
 	</div>
 
