--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -121,7 +121,6 @@
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-
 </head>
 <body
 	class="vertical-layout vertical-compact-menu 2-columns   menu-expanded fixed-navbar"
@@ -161,41 +160,41 @@
 							</div>
 						</div>
 
-						<!-- Modal cho Thêm Khách Hàng Mới -->
-						<div class="modal fade" id="addNewCustomerModal" tabindex="-1"
-							role="dialog" aria-labelledby="addNewCustomerModalLabel"
-							aria-hidden="true">
-							<div class="modal-dialog" role="document">
-								<div class="modal-content">
-									<div class="modal-header">
-										<h5 class="modal-title" id="addNewCustomerModalLabel">Thêm
-											Khách Hàng Mới</h5>
-										<button type="button" class="close" data-dismiss="modal"
-											aria-label="Close">
-											<span aria-hidden="true">&times;</span>
-										</button>
-									</div>
-									<div class="modal-body">
-										<form id="addNewCustomerForm">
-											<div class="form-group">
-												<label for="name">Tên:</label> <input type="text"
-													class="form-control" id="name" name="name" required>
-											</div>
-											<div class="form-group">
-												<label for="address">Địa chỉ:</label> <input type="text"
-													class="form-control" id="address" name="address" required>
-											</div>
-											<div class="form-group">
-												<label for="phone">Số điện thoại:</label> <input style="display:block!important;" type="text"
-													class="form-control" id="phone" name="phone" required>
-											</div>
-											<button type="submit" class="btn btn-primary">Lưu
-												Khách Hàng</button>
-										</form>
-									</div>
-								</div>
-							</div>
-						</div>
+<!-- 						Modal cho Thêm Khách Hàng Mới -->
+<!-- 						<div class="modal fade" id="addNewCustomerModal" tabindex="-1" -->
+<!-- 							role="dialog" aria-labelledby="addNewCustomerModalLabel" -->
+<!-- 							aria-hidden="true"> -->
+<!-- 							<div class="modal-dialog" role="document"> -->
+<!-- 								<div class="modal-content"> -->
+<!-- 									<div class="modal-header"> -->
+<!-- 										<h5 class="modal-title" id="addNewCustomerModalLabel">Thêm -->
+<!-- 											Khách Hàng Mới</h5> -->
+<!-- 										<button type="button" class="close" data-dismiss="modal" -->
+<!-- 											aria-label="Close"> -->
+<!-- 											<span aria-hidden="true">&times;</span> -->
+<!-- 										</button> -->
+<!-- 									</div> -->
+<!-- 									<div class="modal-body"> -->
+<!-- 										<form id="addNewCustomerForm"> -->
+<!-- 											<div class="form-group"> -->
+<!-- 												<label for="name">Tên:</label> <input type="text" -->
+<!-- 													class="form-control" id="name" name="name" required> -->
+<!-- 											</div> -->
+<!-- 											<div class="form-group"> -->
+<!-- 												<label for="address">Địa chỉ:</label> <input type="text" -->
+<!-- 													class="form-control" id="address" name="address" required> -->
+<!-- 											</div> -->
+<!-- 											<div class="form-group"> -->
+<!-- 												<label for="phone">Số điện thoại:</label> <input style="display:block!important;" type="text" -->
+<!-- 													class="form-control" id="phone" name="phone" required> -->
+<!-- 											</div> -->
+<!-- 											<button type="submit" class="btn btn-primary">Lưu -->
+<!-- 												Khách Hàng</button> -->
+<!-- 										</form> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 							</div> -->
+<!-- 						</div> -->
 
 
 						<!-- /////////////////////////////////BEGIN STATUS OF CUSTOMER/////////////////////////////////////////// -->
@@ -258,6 +257,8 @@
 												<button type="button" class="btn">Xóa Nhiều</button>
 											</div>
 										</div>
+
+										
 										<!-- BEGIN BẢNG DANH SÁCH KHÁCH HÀNG VÀ BỘ LỌC -->
 										<div class="container-flex">
 											<div class="filter-container">
@@ -351,7 +352,7 @@
 													<table id="table" class="table table-bordered">
 														<thead>
 															<tr>
-																<th style="padding: 0 !important;" width="2%"
+																<th style ="width: 2%";
 																	data-field="select" class="th1"><input
 																	type="checkbox" id="select-all"
 																	class="d-flex align-items-center justify-content-center" />
@@ -361,17 +362,17 @@
 										        	</div> --></th>
 
 																<!-- <th data-field="logo_company" class="th2">Logo CTY</th> -->
-																<th data-field="id_company" class="th2">ID</th>
-																<th data-field="name_company" class="th3">Tên khách
+																<th data-field="id_company" class="th2" style="width: 10%;">ID</th>
+																<th data-field="name_company" class="th3" style="width: 20%;">Tên khách
 																	hàng</th>
-																<th data-field="address_company" class="th4">Địa
+																<th data-field="address_company" class="th4" style="width: 35%;">Địa
 																	chỉ khách hàng</th>
 																<!-- <th data-field="name_representative" class="th5">Tên
 																		người đại diện</th> -->
 																<!-- <th data-field="email_company" class="th6">Email</th> -->
-																<th data-field="phone_company" class="th7">Số điện
+																<th data-field="phone_company" class="th7" style="width: 15%;">Số điện
 																	thoại</th>
-																<th data-field="status_company" class="th8">Trạng
+																<th data-field="status_company" class="th8" style="width: 15%;">Trạng
 																	thái</th>
 																<!-- <th class="th8">Trạng thái chính</th>
 																	<th class="th9">Trạng thái phụ</th>
@@ -583,6 +584,7 @@
 			</section>
 		</div>
 	</div>
+
 	<!-- END CONTENT -->
 
 	<!-- START CUSTOMIZE BUTTON -->
