update the Add New Customer func to display on the same page instead of navigating to a new page

--- a/web/src/main/webapp/WEB-INF/templates/createCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/createCustomer.html
@@ -79,7 +79,7 @@ body {
 			<p th:text="${errorMessage}"></p>
 		</div>
 		
-		<form id="customerForm" action="save-customer" method="post">
+		<form id="customerForm" action="create-customer" method="post">
 			<div class="form-group">
 				<!-- <label for="id">Customer ID:</label> <input type="text" id="id"
 					name="id" readonly th:value="${customer.id}"> -->
