--- a/web/src/main/webapp/resources/css/buttonGroupFunction.css
+++ b/web/src/main/webapp/resources/css/buttonGroupFunction.css
@@ -62,3 +62,49 @@ p.quantity-check {
 	align-items: center;
 	margin-top: -1px !important;
 }
+
+.modal, .overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.7); 
+    z-index: 999; 
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    width: 300px!important;
+    border-radius: 10px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    font-size: 15px;
+}
+.modal-content p{
+	font-weight: bold;	
+	color: #474747;
+}
+
+.modal-btn {
+    margin: 10px;
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+.modal-btn#cancelBtn {
+    background-color: grey;
+}
