Thêm hàm saveOrUpdate cho một danh sách (List) Customer Thêm View table cho CustomerManagementController.java (liên kết vào tạm vào button "Tỷ lệ chuyển đổi")

--- a/web/src/main/webapp/WEB-INF/templates/fragments/leftNavCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/leftNavCRM.html
@@ -24,9 +24,9 @@
 							data-i18n="nav.dash.fitness">Danh sách khách hàng</a></li>
 						<li><a class="menu-item" href="#"
 							data-i18n="nav.dash.project">Hành trình khách hàng</a></li>
-						<li><a class="menu-item" href="#"
+						<li><a class="menu-item" href="/crm-web/customer-management" 
 							data-i18n="nav.dash.ecommerce">Tỷ lệ chuyển đổi</a></li>
-					</ul></li>
+					</ul></li> <!--Để tạm thêm khách hàng_hanh tại đây -->
 			</ul>
 		</div>
 	</div>
